--- a/vue-murex-frontend/locales/en.json
+++ b/vue-murex-frontend/locales/en.json
@@ -1,20 +1,49 @@
-{
-  "message": "Hello!",
-  "contact": {
-    "pageTitle": "Contact",
-    "content": {
-      "title1": "Information",
-      "title2": "How to come",
-      "address": "Adress",
-      "addressInfo": "2nd floor, 18-6, Dosan-daero 45-gil, Gangnam-gu, Seoul",
-      "call": "Call",
-      "fax": "Fax",
-      "email": "E-mail",
-      "textCont": "Here's how to get to Murex Partners.",
-      "label1": "When using the subway",
-      "label2": "By bus",
-      "label1Info": "Apgujeong Rodeo Station Exit 5 or Apgujeong Station Exit 3 to Dosan Park",
-      "label2Info": "Get off at Dosan Park Intersection (23-155)"
+  {
+    "message": "Hello!",
+    "contact": {
+      "pageTitle": "Contact",
+      "content": {
+        "title1": "Information",
+        "title2": "How to come",
+        "address": "Adress",
+        "addressInfo": "2nd floor, 18-6, Dosan-daero 45-gil, Gangnam-gu, Seoul",
+        "call": "Call",
+        "fax": "Fax",
+        "email": "E-mail",
+        "textCont": "Here's how to get to Murex Partners.",
+        "label1": "When using the subway",
+        "label2": "By bus",
+        "label1Info": "Apgujeong Rodeo Station Exit 5 or Apgujeong Station Exit 3 to Dosan Park",
+        "label2Info": "Get off at Dosan Park Intersection (23-155)"
+      }
+    },
+    "contents": {
+      "pageTitle": "Contents",
+      "tabs": {
+        "allTab": "All",
+        "newTab": "News",
+        "insightTab": "Insights"
+      }
+    },
+    "founders": {
+      "pageTitle": "Our Founders",
+      "filters": {
+        "allFilters": "All",
+        "sectorFilters": "Sector",
+        "statusFilters": "Status"
+      },
+      "sectors": {
+        "consumer": "Consumer",
+        "enterprise": "Enterprise",
+        "healthcare": "Healthcare",
+        "crypto": "Crypto"
+      },
+      "status": {
+        "current": "Current",
+        "alumni": "Alumni"
+      },
+      "button": {
+        "clearFilter": "Clear Filter"
+      }
     }
   }
-}
