--- a/vue-murex-frontend/locales/en.json
+++ b/vue-murex-frontend/locales/en.json
@@ -45,5 +45,9 @@
       "button": {
         "clearFilter": "Clear Filter"
       }
+    },
+    "team": {
+      "pageTitle1": "Our Team",
+      "pageTitle2": "Venture Partner / Advisory"
     }
   }
