--- a/vue-murex-frontend/locales/kr.json
+++ b/vue-murex-frontend/locales/kr.json
@@ -26,7 +26,7 @@
     }
   },
   "founders": {
-    "pageTitle": "창립자",
+    "pageTitle": "Our Founders",
     "filters": {
       "allFilters": "All",
       "sectorFilters": "Sector",
