--- a/vue-murex-frontend/locales/kr.json
+++ b/vue-murex-frontend/locales/kr.json
@@ -5,7 +5,7 @@
     "content": {
       "title1": "Information",
       "title2": "How to come",
-      "address": "주소",
+      "address": "Address",
       "addressInfo": "서울시 강남구 도산대로45길 18-6, 2층",
       "call": "Call",
       "fax": "Fax",
