--- a/vue-murex-frontend/locales/en.json
+++ b/vue-murex-frontend/locales/en.json
@@ -11,8 +11,8 @@
         "fax": "Fax",
         "email": "E-mail",
         "textCont": "Here's how to get to Murex Partners.",
-        "label1": "When using the subway",
-        "label2": "By bus",
+        "label1": "Subway",
+        "label2": "Bus",
         "label1Info": "Apgujeong Rodeo Station Exit 5 or toward Dosan Park from Apgujeong Station Exit 3",
         "label2Info": "Dosan Park Intersection Bus stop (23-155)"
       }
