--- a/vue-murex-frontend/locales/en.json
+++ b/vue-murex-frontend/locales/en.json
@@ -10,7 +10,7 @@
         "call": "Call",
         "fax": "Fax",
         "email": "E-mail",
-        "textCont": "Here's how to get to Murex Partners.",
+        "textCont": "Let us guide you how to visit us.",
         "label1": "Subway",
         "label2": "Bus",
         "label1Info": "Apgujeong Rodeo Station Exit 5 or toward Dosan Park from Apgujeong Station Exit 3",
