--- a/vue-murex-frontend/locales/en.json
+++ b/vue-murex-frontend/locales/en.json
@@ -60,7 +60,7 @@
       "text3": "We invest in extraordinary entrepreneurs arising from Korea’s unique market advantages and some of the most successful entrepreneurs that we previously backed have become our venture partners who work closely with us.",
       "cards" : {
         "first" : "We invest in People",
-        "second" : "houghtfulness and deep conviction, and relationships endure",
+        "second" : "Curiosity, thoughtfulness and deep conviction, and relationships endure",
         "third" : "We invest Differently",
         "fourth" : "Thesis driven",
         "fifth" : "We support with Integrity",
