--- a/vue-murex-frontend/locales/kr.json
+++ b/vue-murex-frontend/locales/kr.json
@@ -62,7 +62,7 @@
     "text2Part2": "하여 시장을 읽습니다.",
     "text3": "새롭고 비범한 창업가들에게 뮤렉스파트너스는 우선 투자합니다.뮤렉스파트너스와 함께 성장의 여정을 일궈낸 창업가들은뮤렉스파트너스의 벤처파트너로 새로운 스타트업 생태계를 열고 있습니다.",
     "cards" : {
-      "first" : "사람에 투자합니다.",
+      "first" : "사람에 투자합니다",
       "second" : "호기심과 집요함으로 일궈낸 비전과 확신,창업자와 VC간의 신뢰와 협력",
       "third" : "다르게 투자합니다",
       "fourth" : "한국 최초, 유일의이론기반 투자 벤처캐피탈",
