--- a/vue-murex-frontend/locales/en.json
+++ b/vue-murex-frontend/locales/en.json
@@ -58,6 +58,7 @@
       "text2Bold": "unique set of theses and thinking that extends beyond conventional limits.",
       "text2Part2": "",
       "text3": "We invest in extraordinary entrepreneurs arising from Korea’s unique market advantages and some of the most successful entrepreneurs that we previously backed have become our venture partners who work closely with us.",
+      "mobileText3": "we invest in extraordinary entrepreneurs arising from Korea’s unique market advantages and some of the most successful entrepreneurs that we previously backed have become our venture partners who work closely with us.",
       "cards" : {
         "first" : "We invest in People",
         "second" : "Curiosity, thoughtfulness and deep conviction, and relationships endure",
