--- a/vue-murex-frontend/locales/en.json
+++ b/vue-murex-frontend/locales/en.json
@@ -23,7 +23,8 @@
         "allTab": "All",
         "newTab": "News",
         "insightTab": "Insights"
-      }
+      },
+      "emptyError": "No content uploaded"
     },
     "founders": {
       "pageTitle": "Our Founders",
@@ -44,7 +45,8 @@
       },
       "button": {
         "clearFilter": "Clear Filter"
-      }
+      },
+      "NoFounders": "No Founders Found."
     },
     "team": {
       "pageTitle1": "Our Team",
