--- a/vue-murex-frontend/locales/en.json
+++ b/vue-murex-frontend/locales/en.json
@@ -27,7 +27,7 @@
       "emptyError": "No content uploaded"
     },
     "founders": {
-      "pageTitle": "Our Founders",
+      "pageTitle": "Our Companies",
       "filters": {
         "allFilters": "All",
         "sectorFilters": "Sector",
