--- a/vue-murex-frontend/locales/kr.json
+++ b/vue-murex-frontend/locales/kr.json
@@ -27,7 +27,7 @@
     "emptyError": "업로드 된 컨텐츠가 없습니다."
   },
   "founders": {
-    "pageTitle": "Our Founders",
+    "pageTitle": "Our Companies",
     "filters": {
       "allFilters": "All",
       "sectorFilters": "Sector",
