--- a/vue-murex-frontend/locales/en.json
+++ b/vue-murex-frontend/locales/en.json
@@ -75,7 +75,7 @@
         "sixth" : "We take deep-dive into challenges facing entrepreneurs and help them to get thorough"
       },
       "bottomtext": {
-        "line1" : "We invest in extraordinary entrepreneurs arising from Korea's unique market advantages and some of the most successful entrepreneurs that we previously line3 backed have become our venture partners who work closely with us.",
+        "line1" : "We invest in extraordinary entrepreneurs arising from Korea's unique market advantages and some of the most successful entrepreneurs that we previously backed have become our venture partners who work closely with us.",
         "line2" : "",
         "line3" : ""
       }
