--- a/vue-murex-frontend/locales/kr.json
+++ b/vue-murex-frontend/locales/kr.json
@@ -70,12 +70,9 @@
       "third" : "투자를 넘어 돕습니다"
     },
     "cards" : {
-      "first" : "호기심과 집요함으로 일궈낸 비전과 확신, 창업자와 VC간의 신뢰와 협력",
+      "first" : "호기심과 집요함으로 일궈낸 비전과 확신, <br> 창업자와 VC간의 신뢰와 협력",
       "second" : "이론기반 투자 벤처캐피탈",
-      "third" : "스타트업 / 창업자의 문제에 대한 분석, 극복과 성취를 위한 끊임없는 지원",
-      "fourth" : "한국 최초, 유일의<br/>이론기반 투자 벤처캐피탈",
-      "fifth" : "깊게 돕습니다",
-      "sixth" : "스타트업/창업자의 문제에 대한 분석,<br/>극복과 성취를 위한 끊임없는 지원"
+      "third" : "스타트업 / 창업자의 문제에 대한 분석, <br> 극복과 성취를 위한 끊임없는 지원"
     },
     "bottomtext": {
       "line1" : "새롭고 비범한 창업가들에게 뮤렉스파트너스는 우선 투자합니다.",
