--- a/vue-murex-frontend/locales/kr.json
+++ b/vue-murex-frontend/locales/kr.json
@@ -60,8 +60,8 @@
     "text1Bold": "성장단계의 스타트업에 투자합니다.",
     "text1Part2": "뮤렉스파트너스는",
     "text2": "뮤렉스파트너스는",
-    "text2Bold": "차별적인 투자 전략, 이론, 근거에 기반하여",
-    "text2Part2": "시장을 읽습니다.",
+    "text2Bold": "차별적인 투자 전략, 이론, 근거에 기반",
+    "text2Part2": "하여 시장을 읽습니다.",
     "text3": "새롭고 비범한 창업가들에게 뮤렉스파트너스는 우선 투자합니다.<br/>뮤렉스파트너스와 함께 성장의 여정을 일궈낸 창업가들은<br/>뮤렉스파트너스의 벤처파트너로 새로운 스타트업 생태계를 열고 있습니다.",
     "mobileText3" : "새롭고 비범한 창업가들에게<br/>뮤렉스파트너스는 우선 투자합니다.<br/>뮤렉스파트너스와 함께 성장의 여정을 일궈낸 창업가들은<br/>뮤렉스파트너스의 벤처파트너로 새로운 스타트업 생태계를<br/>열고 있습니다.",
     "cardshead" : {
