--- a/vue-murex-frontend/locales/kr.json
+++ b/vue-murex-frontend/locales/kr.json
@@ -56,8 +56,8 @@
     }
   },
   "phylosophy" : {
-    "text1": "뮤렉스파트너스는 초기,",
-    "text1Bold": "성장단계의 스타트업에 투자합니다.",
+    "text1": "뮤렉스파트너스는",
+    "text1Bold": "초기, 성장단계의 스타트업에 투자합니다.",
     "text1Part2": "뮤렉스파트너스는",
     "text2": "뮤렉스파트너스는",
     "text2Bold": "차별적인 투자 전략, 이론, 근거에 기반",
