--- a/vue-murex-frontend/locales/en.json
+++ b/vue-murex-frontend/locales/en.json
@@ -55,6 +55,7 @@
     "phylosophy" : {
       "text1": "Murex Partners is a Korean venture capital firm focusing on an",
       "text1Bold": "early & mid-growth stage investments.",
+      "text1-1": "",
       "text1Part2": "",
       "text2": "Our investment strategy is based on a",
       "text2Bold": "unique set of theses and thinking that extends beyond conventional limits.",
