--- a/vue-murex-frontend/locales/kr.json
+++ b/vue-murex-frontend/locales/kr.json
@@ -57,7 +57,7 @@
   },
   "phylosophy" : {
     "text1": "뮤렉스파트너스는",
-    "text1Bold": "초기, 성장단계의 스타트업에 투자합니다",
+    "text1Bold": "초기, 성장단계의 스타트업",
     "text1-1": "에 투자합니다.",
     "text1Part2": "뮤렉스파트너스는",
     "text2": "뮤렉스파트너스는",
